--- a/typography.css
+++ b/typography.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,400i,700i|Open+Sans:300,500,700');
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,400i,700i|Open+Sans:300,500,700');
 
 body {
-    font-family: 'Raleway';
+    font-family: 'Nunito';
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Raleway';
+    font-family: 'Nunito';
     font-size: 10px;
 }
 
 p {
-	font-family: 'Open Sans';
+	font-family: 'Nunito';
 	font-size: 12px;
 }
 
